# Django_StoreRestApi

Exercise Files/: Notes.md  pyproject.toml
Exercise Files/01_04_begin/demo/: db.sqlite3
Exercise Files/01_04_begin/demo/demo/: urls.py
Exercise Files/01_04_begin/demo/store/: api_views.py  serializers.py  tests.py
