[tool.poetry]
name = "exercise_files"
version = "0.1.0"
description = ""
authors = ["Lance Johnson <rlancejohnson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
django-filter = "^21.1"
mock = "^4.0.3"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
